Uploaded image for project: 'Kudu'
  1. Kudu
  2. KUDU-2293

tserver crashes with 'Found tablet in TABLET_DATA_COPYING state during StartTabletCopy()' message

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • 1.5.0, 1.6.0, 1.7.0
    • 1.8.0
    • tserver
    • None

    Description

      When running out of disc space, tablet server can crash while trying to start tablet copying over already tombstoned replica.

      In essence, if DataDirManager::CreateDataDirGroup() returns an error due to the out-of-disc space condition while running TabletCopyClient::Start(), tablet server crashes with an error message like below.  The relevant part of the log is attached.

      F0208 05:35:22.152496  2721 ts_tablet_manager.cc:563] T 5384471d823e46929029f9ff6ce212a3 P c713ac498df040caa897d3229214baa3: Tablet Copy: Found tablet in TABLET_DATA_COPYING state during StartTabletCopy()

      Attachments

        Issue Links

          Activity

            People

              awong Andrew Wong
              aserbin Alexey Serbin
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: