src/kudu/tserver/tablet_copy_client-test.cc
@@ -25,6 +25,7 @@
 #include <thread>
 #include <vector>
 
+#include <gflags/gflags.h>
 #include <gflags/gflags_declare.h>
 #include <glog/logging.h>
 #include <glog/stl_logging.h>
@@ -43,10 +44,10 @@
 #include "kudu/fs/data_dirs.h"
 #include "kudu/fs/fs_manager.h"
 #include "kudu/gutil/casts.h"
-#include "kudu/gutil/gscoped_ptr.h"
 #include "kudu/gutil/port.h"
 #include "kudu/gutil/ref_counted.h"
 #include "kudu/gutil/strings/fastmem.h"
+#include "kudu/gutil/strings/join.h"
 #include "kudu/gutil/strings/substitute.h"
 #include "kudu/rpc/messenger.h"
 #include "kudu/tablet/metadata.pb.h"
@@ -61,6 +62,7 @@
 #include "kudu/util/metrics.h"
 #include "kudu/util/monotime.h"
 #include "kudu/util/net/net_util.h"
+#include "kudu/util/path_util.h"
 #include "kudu/util/slice.h"
 #include "kudu/util/status.h"
 #include "kudu/util/test_macros.h"
@@ -70,7 +72,9 @@ using std::string;
 using std::thread;
 using std::vector;
 
+DECLARE_double(env_inject_eio);
 DECLARE_string(block_manager);
+DECLARE_string(env_inject_eio_globs);
 
 METRIC_DECLARE_counter(block_manager_total_disk_sync);
 
@@ -106,7 +110,11 @@ class TabletCopyClientTest : public TabletCopyTest {
     fs_manager_.reset(new FsManager(Env::Default(), opts));
     ASSERT_OK(fs_manager_->CreateInitialFileSystemLayout());
     ASSERT_OK(fs_manager_->Open());
+    ASSERT_OK(ResetTabletCopyClient());
+  }
 
+  // Sets up a new tablet copy client.
+  Status ResetTabletCopyClient() {
     scoped_refptr<ConsensusMetadataManager> cmeta_manager(
         new ConsensusMetadataManager(fs_manager_.get()));
 
@@ -119,13 +127,17 @@ class TabletCopyClientTest : public TabletCopyTest {
                                        nullptr /* no metrics */));
     RaftPeerPB* cstate_leader;
     ConsensusStatePB cstate;
-    ASSERT_OK(tablet_replica_->consensus()->ConsensusState(&cstate));
-    ASSERT_OK(GetRaftConfigLeader(&cstate, &cstate_leader));
+    RETURN_NOT_OK(tablet_replica_->consensus()->ConsensusState(&cstate));
+    RETURN_NOT_OK(GetRaftConfigLeader(&cstate, &cstate_leader));
     leader_ = *cstate_leader;
+    return Status::OK();
+  }
 
+  // Starts the tablet copy.
+  Status StartCopy() {
     HostPort host_port;
-    ASSERT_OK(HostPortFromPB(leader_.last_known_addr(), &host_port));
-    ASSERT_OK(client_->Start(host_port, &meta_));
+    RETURN_NOT_OK(HostPortFromPB(leader_.last_known_addr(), &host_port));
+    return client_->Start(host_port, &meta_);
   }
 
  protected:
@@ -133,9 +145,9 @@ class TabletCopyClientTest : public TabletCopyTest {
 
   MetricRegistry metric_registry_;
   scoped_refptr<MetricEntity> metric_entity_;
-  gscoped_ptr<FsManager> fs_manager_;
+  unique_ptr<FsManager> fs_manager_;
   shared_ptr<rpc::Messenger> messenger_;
-  gscoped_ptr<TabletCopyClient> client_;
+  unique_ptr<TabletCopyClient> client_;
   scoped_refptr<TabletMetadata> meta_;
   RaftPeerPB leader_;
 };
@@ -167,20 +179,89 @@ Status TabletCopyClientTest::CompareFileContents(const string& path1, const stri
   return Status::OK();
 }
 
+// Test a tablet copy going through the various states in the copy state
+// machine.
+TEST_F(TabletCopyClientTest, TestLifeCycle) {
+  // Target fault injection for the tablet metadata directories, but do not
+  // start injecting failures just yet.
+  const vector<string> meta_dirs = {
+      JoinPathSegments(client_->fs_manager_->GetConsensusMetadataDir(), "**"),
+      JoinPathSegments(client_->fs_manager_->GetTabletMetadataDir(), "**") };
+  FLAGS_env_inject_eio_globs = JoinStrings(meta_dirs, ",");
+
+  ASSERT_EQ(TabletCopyClient::State::kInitialized, client_->state_);
+  Status s;
+  // If we're creating a brand new tablet, failing to start the copy will yield
+  // no changes in-memory. It should be as if the copy hadn't started.
+  {
+    google::FlagSaver fs;
+    FLAGS_env_inject_eio = 1.0;
+    s = StartCopy();
+    ASSERT_TRUE(s.IsIOError()) << s.ToString();
+    ASSERT_STR_CONTAINS(s.ToString(), "Failed to write tablet metadata");
+    ASSERT_EQ(TabletCopyClient::State::kInitialized, client_->state_);
+    ASSERT_FALSE(meta_);
+  }
+
+  // Now let's try replacing a tablet. Set a metadata that we can replace.
+  ASSERT_OK(ResetTabletCopyClient());
+  ASSERT_OK(StartCopy());
+  ASSERT_EQ(TabletCopyClient::State::kStarted, client_->state_);
+  ASSERT_OK(client_->Finish());
+  ASSERT_EQ(TabletCopyClient::State::kFinished, client_->state_);
+
+  // Since we're going to replace the tablet, we need to tombstone the existing
+  // metadata first.
+  meta_->set_tablet_data_state(tablet::TABLET_DATA_TOMBSTONED);
+  ASSERT_OK(ResetTabletCopyClient());
+  ASSERT_OK(client_->SetTabletToReplace(meta_, 0));
+
+  // If we're replacing a tablet, failing to start will yield changes
+  // in-memory, and it is thus necessary to recognize the copy is in the
+  // process of starting.
+  {
+    google::FlagSaver fs;
+    FLAGS_env_inject_eio = 1.0;
+    s = StartCopy();
+    ASSERT_TRUE(s.IsIOError()) << s.ToString();
+    ASSERT_STR_CONTAINS(s.ToString(), "Could not replace superblock");
+    ASSERT_EQ(TabletCopyClient::State::kStarting, client_->state_);
+  }
+
+  // Make sure we are still in the appropriate state if we fail to finish.
+  ASSERT_OK(ResetTabletCopyClient());
+  client_->SetTabletToReplace(meta_, 0);
+  ASSERT_OK(StartCopy());
+  FLAGS_env_inject_eio = 1.0;
+  s = client_->Finish();
+  ASSERT_TRUE(s.IsIOError());
+  ASSERT_EQ(TabletCopyClient::State::kStarted, client_->state_);
+
+  // Closing out the copy should leave the copy client in its terminal state,
+  // even upon failure.
+  s = client_->Abort();
+  ASSERT_TRUE(s.IsIOError());
+  ASSERT_EQ(TabletCopyClient::State::kFinished, client_->state_);
+  ASSERT_EQ(tablet::TABLET_DATA_TOMBSTONED, meta_->tablet_data_state());
+}
+
 // Implementation test that no blocks exist in the new superblock before fetching.
 TEST_F(TabletCopyClientTest, TestNoBlocksAtStart) {
+  ASSERT_OK(StartCopy());
   ASSERT_GT(ListBlocks(*client_->remote_superblock_).size(), 0);
   ASSERT_EQ(0, ListBlocks(*client_->superblock_).size());
 }
 
 // Basic begin / end tablet copy session.
 TEST_F(TabletCopyClientTest, TestBeginEndSession) {
+  ASSERT_OK(StartCopy());
   ASSERT_OK(client_->FetchAll(nullptr /* no listener */));
   ASSERT_OK(client_->Finish());
 }
 
 // Basic data block download unit test.
 TEST_F(TabletCopyClientTest, TestDownloadBlock) {
+  ASSERT_OK(StartCopy());
   BlockId block_id = FirstColumnBlockId(*client_->remote_superblock_);
   Slice slice;
   faststring scratch;
@@ -201,6 +282,7 @@ TEST_F(TabletCopyClientTest, TestDownloadBlock) {
 
 // Basic WAL segment download unit test.
 TEST_F(TabletCopyClientTest, TestDownloadWalSegment) {
+  ASSERT_OK(StartCopy());
   ASSERT_OK(env_util::CreateDirIfMissing(
       env_, fs_manager_->GetTabletWalDir(GetTabletId())));
 
@@ -222,6 +304,7 @@ TEST_F(TabletCopyClientTest, TestDownloadWalSegment) {
 
 // Ensure that we detect data corruption at the per-transfer level.
 TEST_F(TabletCopyClientTest, TestVerifyData) {
+  ASSERT_OK(StartCopy());
   string good = "This is a known good string";
   string bad = "This is a known bad! string";
   const int kGoodOffset = 0;
@@ -257,6 +340,7 @@ TEST_F(TabletCopyClientTest, TestVerifyData) {
 }
 
 TEST_F(TabletCopyClientTest, TestDownloadAllBlocks) {
+  ASSERT_OK(StartCopy());
   // Download and commit all the blocks.
   ASSERT_OK(client_->DownloadBlocks());
   ASSERT_OK(client_->transaction_->CommitCreatedBlocks());
@@ -290,6 +374,7 @@ TEST_F(TabletCopyClientTest, TestDownloadAllBlocks) {
 // Test that failing a disk outside fo the tablet copy client will eventually
 // stop the copy client and cause it to fail.
 TEST_F(TabletCopyClientTest, TestFailedDiskStopsClient) {
+  ASSERT_OK(StartCopy());
   DataDirManager* dd_manager = fs_manager_->dd_manager();
 
   // Repeatedly fetch files for the client.
@@ -334,6 +419,11 @@ struct AbortTestParams {
 class TabletCopyClientAbortTest : public TabletCopyClientTest,
                                   public ::testing::WithParamInterface<
                                       tuple<DownloadBlocks, DeleteTrigger>> {
+ public:
+  virtual void SetUp() override {
+    TabletCopyClientTest::SetUp();
+    ASSERT_OK(StartCopy());
+  }
  protected:
   // Create the specified number of blocks with junk data for testing purposes.
   void CreateTestBlocks(int num_blocks);
